# statuspage-bsky-sync

./: Cargo.toml  README.md  example.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy.yml  test.yaml
src/: main.rs
