[package]
name = "statuspage-bsky-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
atrium-api = "0.25.2"
bsky-sdk = "0.1.18"
ipld-core = "0.4.2"
lambda_http = { version = "0.13.0", features = ["apigw_http"] }
openssl = { version = "0.10.72", features = ["vendored"] }
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.41", features = ["serde", "serde-well-known"] }

tokio = { version = "1", features = ["macros"] }
