[package]
name = "statuspage-bsky-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
atrium-api = "0.25.2"
bsky-sdk = "0.1.18"
ipld-core = "0.4.2"
lambda_http = { version = "0.13.0", features = ["apigw_http"] }
openssl = { version = "0.10.72", features = ["vendored"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["macros"] }

tokio = { version = "1", features = ["macros"] }
