[package]
name = "statuspage-bsky-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
atrium-api = "0.25.6"
bsky-sdk = "0.1.22"
convert_case = "0.10.0"
ipld-core = "0.4.2"
lambda_http = { version = "1.0.2", features = ["apigw_http"] }
openssl = { version = "0.10.75", features = ["vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.16.1", features = ["macros"] }

tokio = { version = "1", features = ["macros"] }
